--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ RSS: false
 weibo_username:    ioito 
 zhihu_username:    ioito 
 github_username:   ioito 
-twitter_username:  ioito 
+twitter_username:  ioi_to
 #facebook_username:  huxpro
 # linkedin_username:  firstname-lastname-idxxxx
 
